--- a/themes/custom/layouts/partials/head.html
+++ b/themes/custom/layouts/partials/head.html
@@ -1,6 +1,6 @@
 {{ $targetPath := "css/main.css" }}
-{{ $sassRoot := "sass/main.scss" }}
-{{ $sass := resources.Get "sass/main.scss" }}
+{{ $sassRoot := "scss/main.scss" }}
+{{ $sass := resources.Get "scss/main.scss" }}
 {{ $style := $sass | resources.ToCSS }}
 {{ $options := ( dict "targetPath" $targetPath  "outputStyle" "compressed" "enableSourceMap" true ) }}
 {{ $devStyle := resources.Get $sassRoot | resources.ToCSS $options }}
@@ -11,7 +11,10 @@
   <link rel="stylesheet" href="https://unpkg.com/open-props"/>
   <link rel="stylesheet" href="https://unpkg.com/open-props/normalize.min.css"/>
   <link rel="stylesheet" href="{{ $devStyle.RelPermalink }}">
-  <title>
+  {{ block "customHead" . }}
+    {{- partial "baba.html" -}}
+  {{ end }}
+  <title data-test-attr="false">
     {{ block "title" . }}
     {{ $title := print  .Title " | " .Site.Title }}
       {{ if .IsHome }}
